--- a/src/css/MainPage.css
+++ b/src/css/MainPage.css
@@ -147,6 +147,8 @@ body{
     font-weight: 600;
 }
 
+
+
 @media only screen and (max-width: 800px) {
     .absence-calculator-header-conainer{
         width: 100%;
@@ -208,4 +210,19 @@ body{
         padding-bottom: 10vh;
     }
     
+}
+@media only screen and (max-width: 1400px){
+    .add-marks-button{
+        width: 13vw;
+        min-width: 170px;
+    }
+    .add-marks-button-container{
+        margin-top: 9vh;
+    }
+    .loads-data-container{
+        min-width: 320px;
+    }
+    .absence-calculator-container{
+        width: 50vw;
+    }
 }
