--- a/src/css/MarksheetDialog.css
+++ b/src/css/MarksheetDialog.css
@@ -19,6 +19,7 @@
     border-radius: 0.7vh;
     display: flex;
     flex-direction: column;
+    min-height: 480px;
 }
 .marksheet-dialog-title-container{
     flex: 1;
@@ -120,6 +121,62 @@
     filter: brightness(105%);
     transform: scale(1.01);
 } 
+.marks-mode-choose-container-dialog{
+    width: 100%;
+    height: 100%;
+    border-radius: 0.7vh;
+    display: flex;
+    flex-direction: column;
+}
+.marks-mode-choose-title-container{
+    flex: 1;
+    display: flex;
+    justify-content: start;
+    align-items: end;
+}
+.marks-mode-choose-title{
+    margin-left: 5%;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.marks-mode-choose-choose-container{
+    flex: 5;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 1vh;
+}
+
+.marks-mode-choose-button-container{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.marks-mode-choose-button{
+    width: 82%;
+    aspect-ratio: 7.5/1;
+    border-radius: 0.2vw;
+    padding: 0.3vh;
+    border: none;
+    background-image: linear-gradient(to right, rgb(0, 255, 238), rgb(0, 140, 255));
+    font-weight: 700;
+    transition: all 0.1s;
+}
+.marks-mode-choose-button:hover{
+    transform: scale(1.005);
+    cursor: pointer;
+    filter: brightness(102%);
+}
+.marks-container-dialog{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
 @keyframes slideIn{
     0%{
         transform: translateY(100%);
@@ -128,14 +185,9 @@
 *{
     font-family: var(--main-font);
 }
-@media (max-width: 1100px) {
-    .close-dialog-button{
-        margin: 10%;
-    }
-    .marksheet-dialog-title{
-        margin-left: 10%;
-        font-size: 120%;
-        font-weight: 500;
-    
+
+@media only screen and (max-width: 1400px) {
+    .marksheet-dialog-container{
+        height: 85vh;
     }
 }
