--- a/src/css/PasswordReset.css
+++ b/src/css/PasswordReset.css
@@ -30,6 +30,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-width: 380px;
+
 }
 .password-reset-logo-container{
     height: 25vh;
@@ -37,6 +39,8 @@
     display: flex;
     justify-content: start;
     align-items: center;
+    min-width: 380px;
+
 }
 .password-reset-logo-container img{
     width: 75%;
@@ -50,6 +54,8 @@
     display: flex;
     justify-content: start;
     align-items: end;
+    min-width: 380px;
+
 }
 .password-reset-title{
     font-size: 1.8em;
@@ -64,6 +70,8 @@
     justify-content: center;
     align-items: start;
     width: 20vw;
+    min-width: 380px;
+
 }
 .password-reset-details-container input{
     width: 75%;
