--- a/src/css/PeriodChoose.css
+++ b/src/css/PeriodChoose.css
@@ -32,6 +32,7 @@
     margin-left: 5%;
     background-color:rgba(255, 0, 0, 0.761);
     box-shadow: 0.1vh 0.1vh 0.1vh rgba(0, 0, 0, 0.1);
+    border-radius: 0.2vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,6 +57,9 @@
     background-color: transparent;
     border: none;
     aspect-ratio: 1/1;
+}
+.period-choose-delete-button:hover{
+    cursor: pointer;
 }
 @media only screen and (max-width: 800px){
     .period-choose-container{
