--- a/src/css/RegisterPage.css
+++ b/src/css/RegisterPage.css
@@ -9,7 +9,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
-    align-items: center;
+    align-items: centeegis;
     justify-content: center;
     background-color: white;
 }
@@ -139,6 +139,7 @@
     display: flex;
     margin-left: 5%;
     flex-direction: column;
+    min-width: 320px;
 }
 .register-details-creds-container{
     background-color: rgba(255, 255, 255, 0.8);
@@ -273,6 +274,8 @@
         width: 96vw;
         margin-left: 2vw;
         margin-right: 2vw;
+        min-width: 400px;
+
     }
     .register-details-details input{
         width: 80%;
