--- a/src/css/RequirePasswordReset.css
+++ b/src/css/RequirePasswordReset.css
@@ -12,6 +12,8 @@
     display: flex;
     justify-content: start;
     align-items: center;
+    min-width: 380px;
+
 }
 .require-reset-logo-container img{
     width: 75%;
@@ -25,6 +27,8 @@
     display: flex;
     justify-content: start;
     align-items: end;
+    min-width: 380px;
+
 }
 .require-reset-title{
     font-size: 1.8em;
@@ -39,6 +43,8 @@
     justify-content: center;
     align-items: start;
     width: 20vw;
+    min-width: 380px;
+
 }
 .require-reset-details-container input{
     width: 75%;
