--- a/src/css/PasswordReset.css
+++ b/src/css/PasswordReset.css
@@ -114,18 +114,26 @@
 .error{
     background-color: rgba(255, 77, 77, 0.6);
 }
-@media screen and (max-width: 800px){
+@media screen and (max-width:800px){
     .password-reset-title-container{
-        width: 80vw;
+        width: 80%;
+        margin-left: 10%;
     }
     .password-reset-details-container{
         width: 80vw;
     }
     .password-reset-details-container input{
-        width: 100%;
+        width: 80%;
+        margin-left: 10%;
     }
     .password-reset-details-container button{
-        width: 100%;
+        width: 80%;
+        margin-left: 10%;
+    }
+    .password-reset-details-container label{
+        width: 80%;
+        margin-left: 10%;
+        
     }
     .password-reset-page-container{
         justify-content: start;
