--- a/src/css/RequirePasswordReset.css
+++ b/src/css/RequirePasswordReset.css
@@ -104,18 +104,20 @@
     justify-content: start;
     align-items: center;
 }
-@media screen and (max-width: 800px){
+@media only screen  and (max-width: 900px){
     .require-reset-title-container{
-        width: 80vw;
+        width: 80%;
+        margin-left: 10%;
     }
     .require-reset-details-container{
-        width: 80vw;
+        width: 80%;
+        margin-left: 10%;
     }
     .require-reset-details-container input{
-        width: 100%;
+        width: 70%;
     }
     .require-reset-details-container button{
-        width: 100%;
+        width: 70%;
     }
     .require-reset-page-container{
         justify-content: start;
