--- a/src/css/ErrorMessage.css
+++ b/src/css/ErrorMessage.css
@@ -2,6 +2,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
+    min-width: fit-content;
     width: 10vw;
     aspect-ratio: 5/1;
     background-color:rgba(252, 75, 62, 0.7);
@@ -18,6 +19,10 @@
 .error-message-container p{
     font-weight: 600;
     aspect-ratio: 6/1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
 }
 
 @media only screen and (max-width: 800px){
