--- a/src/css/LoadData.css
+++ b/src/css/LoadData.css
@@ -109,7 +109,16 @@
         column-gap: 3%;
         width: 96%;
         grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: 30%;
+        grid-auto-rows: 25% !important;
+    }
+    .load-data{
+        height: 90%;
+    }
+    .load-data-date p{
+        font-size: 0.5em;
+    }
+    .load-data-overall-info p{
+        font-size: 0.5em;
     }
     
 }
