--- a/src/css/LoginPage.css
+++ b/src/css/LoginPage.css
@@ -309,7 +309,7 @@
         width: 90%;
     }
     .register-container{
-        width: 96vw;
+        width: 100%;
     }
     .register-container-button-container{
         display: flex;
