--- a/src/css/LessonChoose.css
+++ b/src/css/LessonChoose.css
@@ -53,13 +53,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    font-size: 1.3em;
+    font-size: 0.75em;
+    padding: 13%;
     font-weight: 400;
     width: 70%;
     text-align: center;
     box-sizing: border-box;
     margin-left: 15%;
-    aspect-ratio: 1/1;
+    aspect-ratio: 1/1 !important;
 }
 @media only screen and (max-width: 800px) {
     .lesson-choose-container{
